# dashfin

./: .gitignore  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  run.sh  wsgi.py
application/: __init__.py  config.py  utils.py
application/data/: __init__.py  database.py  fx.py
application/interface/: __init__.py
application/interface/fx/: fx.py
application/interface/fx/templates/: fx-template.html
application/interface/home/: home.py
application/interface/home/templates/: home.html
application/static/: scripts.js  style.css
application/templates/: base.html  header.html  scripts.html
data/: __init__.py  fx.py  providers.py
