[tool.poetry]
name = "findash"
version = "0.1.0"
description = "A simple financial dashboard"
authors = ["Felipe Valladao <felipe.valladao@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"
flask = "^1.1.0"
dash = "^1.14.0"
numpy="^1.19.4"
pandas = "^1.1.4"
requests = "^2.24.0"
yfinance = "^0.1.54"
matplotlib = "^3.3.3"
Flask-SQLAlchemy = "^2.4.4"
more-itertools = "^8.6.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
IPython = "^7.17.0"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
